Add python impl link to web signer demo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <a href="https://github.com/wulkanowy/uonet-request-signer">GitHub</a> |
         <a href="https://github.com/wulkanowy/uonet-request-signer/tree/master/php">PHP implementation</a> |
         <a href="https://github.com/wulkanowy/uonet-request-signer/tree/master/js">JS implementation</a> |
-        <a href="https://github.com/VLO-GDA/uonet-sdk/blob/master/src/main/java/net/maciekmm/uonet/EncryptionUtils.java">Java implementation</a>
+        <a href="https://github.com/VLO-GDA/uonet-sdk/blob/master/src/main/java/net/maciekmm/uonet/EncryptionUtils.java">Java implementation</a> |
+        <a href="https://github.com/wulkanowy/uonet-request-signer/tree/master/python">Python implementation</a> |
     </footer>
     <script>
         function uuid() {
