--- a/index.html
+++ b/index.html
@@ -60,19 +60,20 @@
         <a href="https://github.com/wulkanowy/uonet-request-signer">GitHub</a> |
         <a href="https://github.com/wulkanowy/uonet-request-signer/tree/master/php">PHP implementation</a> |
         <a href="https://github.com/wulkanowy/uonet-request-signer/tree/master/js">JS implementation</a> |
+        <a href="https://github.com/wulkanowy/uonet-request-signer/tree/master/node">Node.js implementation</a> |
         <a href="https://github.com/VLO-GDA/uonet-sdk/blob/master/src/main/java/net/maciekmm/uonet/EncryptionUtils.java">Java implementation</a> |
-        <a href="https://github.com/wulkanowy/uonet-request-signer/tree/master/python">Python implementation</a> |
+        <a href="https://github.com/wulkanowy/uonet-request-signer/tree/master/python">Python implementation</a>
     </footer>
     <script>
         function uuid() {
-            var uuid = "", i, random;
+            let uuid = "", i, random;
             for (i = 0; i < 32; i++) {
                 random = Math.random() * 16 | 0;
 
-                if (i == 8 || i == 12 || i == 16 || i == 20) {
+                if (i === 8 || i === 12 || i === 16 || i === 20) {
                 uuid += "-"
                 }
-                uuid += (i == 12 ? 4 : (i == 16 ? (random & 3 | 8) : random)).toString(16);
+                uuid += (i === 12 ? 4 : (i === 16 ? (random & 3 | 8) : random)).toString(16);
             }
             return uuid.toUpperCase();
         }
